# K2-Assembly

./: CMakeLists.txt  README.md  hello.asm  main.cpp
Emulator/: CMakeLists.txt  a.out  main.cpp
Emulator/include/: Emulator.hpp
Emulator/src/: Emulator.cpp
include/: Parser.hpp
src/: Parser.cpp
